@@ -52,26 +52,41 @@
               (set-window-configuration config))))
     (add-hook 'pre-command-hook restore)))
 
+(defun corfu-info--display-buffer (buffer name)
+  "Display BUFFER and return window displaying the buffer.
+Make the buffer persistent with NAME if non-nil."
+  (if name
+      (unless (buffer-local-value 'buffer-file-name buffer)
+        (if-let ((old (get-buffer name)))
+            (setq buffer (prog1 old (kill-buffer buffer)))
+          (with-current-buffer buffer
+            (rename-buffer name))))
+    (corfu-info--restore-on-next-command))
+  (setq other-window-scroll-buffer buffer)
+  (display-buffer buffer t))
+
 ;;;###autoload
-(defun corfu-info-documentation ()
-  "Show documentation of current candidate."
-  (interactive)
+(defun corfu-info-documentation (&optional arg)
+  "Show documentation of current candidate.
+If called with a prefix ARG, the buffer is persistent."
+  (interactive "P")
   ;; Company support, taken from `company.el', see `company-show-doc-buffer'.
   (when (< corfu--index 0)
     (user-error "No candidate selected"))
   (let ((cand (nth corfu--index corfu--candidates)))
     (if-let ((fun (plist-get corfu--extra :company-doc-buffer))
              (res (funcall fun cand)))
-        (let ((buf (or (car-safe res) res)))
-          (corfu-info--restore-on-next-command)
-          (setq other-window-scroll-buffer (get-buffer buf))
-          (set-window-start (display-buffer buf t) (or (cdr-safe res) (point-min))))
+        (set-window-start (corfu-info--display-buffer
+                           (get-buffer (or (car-safe res) res))
+                           (and arg (format "*corfu doc: %s*" cand)))
+                          (or (cdr-safe res) (point-min)))
       (user-error "No documentation available for `%s'" cand))))
 
 ;;;###autoload
-(defun corfu-info-location ()
-  "Show location of current candidate."
-  (interactive)
+(defun corfu-info-location (&optional arg)
+  "Show location of current candidate.
+If called with a prefix ARG, the buffer is persistent."
+  (interactive "P")
   ;; Company support, taken from `company.el', see `company-show-location'.
   (when (< corfu--index 0)
     (user-error "No candidate selected"))
@@ -79,19 +94,19 @@
     ;; BUG: company-location may throw errors if location is not found
     (if-let ((fun (ignore-errors (plist-get corfu--extra :company-location)))
              (loc (funcall fun cand)))
-        (let ((buf (or (and (bufferp (car loc)) (car loc))
-                       (find-file-noselect (car loc) t))))
-          (corfu-info--restore-on-next-command)
-          (setq other-window-scroll-buffer buf)
-          (with-selected-window (display-buffer buf t)
-            (save-restriction
-              (widen)
-              (goto-char (point-min))
-              (when-let (pos (cdr loc))
-                (if (bufferp (car loc))
-                    (goto-char pos)
-                  (forward-line (1- pos))))
-              (set-window-start nil (point)))))
+        (with-selected-window
+            (corfu-info--display-buffer
+             (or (and (bufferp (car loc)) (car loc))
+                 (find-file-noselect (car loc) t))
+             (and arg (format "*corfu loc: %s*" cand)))
+          (save-restriction
+            (widen)
+            (goto-char (point-min))
+            (when-let (pos (cdr loc))
+              (if (bufferp (car loc))
+                  (goto-char pos)
+                (forward-line (1- pos))))
+            (set-window-start nil (point))))
       (user-error "No location available for `%s'" cand))))
 
 ;; Emacs 28: Do not show Corfu commands with M-X
